# collect-generic

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  requirements_dev.in  requirements_dev.txt  scrapy.cfg  setup.py
.github/workflows/: lint.yml
generic_scrapy/: filters.py  settings.py  util.py
generic_scrapy/base_spiders/: base_spider.py  export_file_spider.py
generic_scrapy/commands/: incrementalupdate.py
generic_scrapy/spiders/: poland.py  uzbekistan_auctions.py  uzbekistan_base_spider.py  uzbekistan_completed_deals.py  uzbekistan_deals.py  uzbekistan_direct_purchases.py  uzbekistan_etender.py  uzbekistan_shop.py
