[project]
name = "collect-generic"
version = "0.0.0"

[project.entry-points.scrapy]
settings = "kingfisher_scrapy.settings"

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]

[tool.ruff]
line-length = 119
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN", "COM", "EM",
  # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  "W191", "E501", "D206", "Q000", "Q001", "Q002", "Q003", "ISC001",
  "D203", "D212",  # ignore incompatible rules
  "D200",  # documentation preferences
  "C901", "PLR0912",  # complexity preferences
  "D",  # docstrings
  "PTH",  # pathlib
  "ARG002",  # Scrapy keyword arguments
  "ERA001",  # commented Scrapy settings
  "RUF012",  # Scrapy spider attributes
  "TRY003",  # Scrapy usage errors
]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["copyright"]
