[project]
name = "collect-generic"
version = "0.0.0"

[project.entry-points.scrapy]
settings = "kingfisher_scrapy.settings"

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]

[tool.ruff]
line-length = 119
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN", "C901", "COM812", "D203", "D212", "D415", "EM", "ISC001", "PERF203", "PLR091", "Q000",
    "D1",
    "PTH",
    "RUF012",  # scrapy
    "TRY003",  # errors
]

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.per-file-ignores]
"*/settings.py" = ["ERA001"]  # commented-out code
"*/log_formatter.py" = ["ARG002"]  # scrapy
